[project]
name = "sas-schema-analyzer"
version = "1.1.0"
description = "Production-ready FastMCP server for SAS schema analysis with Claude Desktop integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "pyreadstat>=1.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]
authors = [
    {name = "SAS Schema Analyzer", email = "user@example.com"}
]
keywords = ["sas", "schema", "mcp", "claude", "data-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
sas-schema-analyzer = "sas_schema_analyzer:main"
sas-schema = "sas_schema_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/sas-schema-analyzer"
Documentation = "https://github.com/yourusername/sas-schema-analyzer#readme"
Repository = "https://github.com/yourusername/sas-schema-analyzer.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sas_schema_analyzer"]

[tool.uv]
dev-dependencies = []
