[project]
name = "sas-schema-analyzer"
version = "1.1.0"
description = "Production-ready FastMCP server for SAS schema analysis with Claude Desktop integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=3.0.0; python_version >= '3.10'",
    "pyreadstat>=1.2.0,<=1.2.8",
    "pandas>=1.5,<2.1; python_version < '3.9'",
    "pandas>=2.0.0; python_version >= '3.9'",
    "numpy>=1.21,<1.25; python_version < '3.9'",
    "numpy>=1.24.0; python_version >= '3.9'",
    "psutil>=5.9.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]
authors = [
    {name = "SAS Schema Analyzer", email = "user@example.com"}
]
keywords = ["sas", "schema", "mcp", "claude", "data-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
sas-schema-analyzer = "sas_schema_analyzer:main"
sas-schema = "sas_schema_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/sas-schema-analyzer"
Documentation = "https://github.com/yourusername/sas-schema-analyzer#readme"
Repository = "https://github.com/yourusername/sas-schema-analyzer.git"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sas_schema_analyzer*"]

[tool.uv]
dev-dependencies = []
